# egui_plot

./: Cargo.toml  index.html
demo/: Cargo.toml
egui_plot/src/: lib.rs
