[package]
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition.workspace = true
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]
license.workspace = true
name = "demo"
publish = false
rust-version.workspace = true
version.workspace = true
default-run = "demo"

[lints]
workspace = true

[dependencies]
egui_plot = { workspace = true, features = ["serde"] }

egui = { git = "ssh://git@github.com/embotech/egui.git", rev = "7ceca0003d29f55022ecd85f01f4a17fe27ec9d8" }
eframe = { git = "ssh://git@github.com/embotech/egui.git", rev = "7ceca0003d29f55022ecd85f01f4a17fe27ec9d8", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log.workspace = true
serde = { workspace = true, features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
web-sys.workspace = true              # to access the DOM (to hide the loading text)
